--- a/Framework/test-output/emailable-report.html
+++ b/Framework/test-output/emailable-report.html
@@ -9,24 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">26</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">23</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m0">setUpSuite</a></td><td rowspan="1">1631123242273</td><td rowspan="1">11</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="3">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m1">setup</a></td><td rowspan="1">1631123242302</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m2">tearDown</a></td><td rowspan="1">1631123242317</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m3">tearDownMethod</a></td><td rowspan="1">1631123242315</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m4">loginApp</a></td><td rowspan="1">1631123242313</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m0">setup</a></td><td rowspan="1">1631125442899</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="2">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m1">tearDown</a></td><td rowspan="1">1631125442915</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m2">tearDownMethod</a></td><td rowspan="1">1631125442914</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.learnautomation.testcases.LoginTestCRM</td><td><a href="#m3">loginApp</a></td><td rowspan="1">1631125442912</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.learnautomation.testcases.LoginTestCRM#setUpSuite</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problems: 
-	ExtentHtmlReporter cannot be resolved to a type
-	ExtentHtmlReporter cannot be resolved to a type
-
-	at com.learnautomation.pages.BaseClass.setUpSuite(BaseClass.java:44)
-... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.learnautomation.testcases.LoginTestCRM#setup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.learnautomation.testcases.LoginTestCRM#tearDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.learnautomation.testcases.LoginTestCRM#tearDownMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.learnautomation.testcases.LoginTestCRM#loginApp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problems: 
-	ExtentHtmlReporter cannot be resolved to a type
-	ExtentHtmlReporter cannot be resolved to a type
-
-	at com.learnautomation.pages.BaseClass.setUpSuite(BaseClass.java:44)
-... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.learnautomation.testcases.LoginTestCRM#setup</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeClass on method setup but has not been marked @Optional or defined
+in D:\Automationprojects\SeleniumFramework\Framework\XMLFiles\testng.xml
+... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.learnautomation.testcases.LoginTestCRM#tearDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.learnautomation.testcases.LoginTestCRM#tearDownMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.learnautomation.testcases.LoginTestCRM#loginApp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeClass on method setup but has not been marked @Optional or defined
+in D:\Automationprojects\SeleniumFramework\Framework\XMLFiles\testng.xml
+... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
