--- a/Framework/test-output/index.html
+++ b/Framework/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>D:\Java Workspace\SeleniumFramework\Framework\XMLFiles\testng.xml</span>
+                    <span>D:\Automationprojects\SeleniumFramework\Framework\XMLFiles\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -128,12 +128,10 @@
                   <a name="loginApp">
                   </a> <!-- loginApp -->
                   <span class="method-name">loginApp</span>
-                  <div class="stack-trace">java.lang.Error: Unresolved compilation problems: 
-	ExtentHtmlReporter cannot be resolved to a type
-	ExtentHtmlReporter cannot be resolved to a type
-
-	at com.learnautomation.pages.BaseClass.setUpSuite(BaseClass.java:44)
-... Removed 20 stack frames
+                  <div class="stack-trace">org.testng.TestNGException: 
+Parameter &apos;browser&apos; is required by BeforeClass on method setup but has not been marked @Optional or defined
+in D:\Automationprojects\SeleniumFramework\Framework\XMLFiles\testng.xml
+... Removed 23 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -142,7 +140,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Java Workspace\SeleniumFramework\Framework\XMLFiles\testng.xml</span>
+            <span class="header-content">D:\Automationprojects\SeleniumFramework\Framework\XMLFiles\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -228,14 +226,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.learnautomation.testcases.LoginTestCRM</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">setUpSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">loginApp</span>
-                <span class="method-start">-1631123242273 ms</span>
+                <span class="method-start">-1631125442329 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
